--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,13 +31,13 @@
          </ul>
          <ul class="mobile-apps">
            
-           <li><a href="#"><img src="img/icons8-android-os-50.png"><strong>Android App</strong></a></li>
-           <li><a href="#"><img src="img/icons8-apple-logo-50.png"><strong>iOS App</strong></a></li>
+           <li><a href="#"><img src="img/android-white.png"><strong>Android App</strong></a></li>
+           <li><a href="#"><img src="img/apple-white.png"><strong>iOS App</strong></a></li>
          </ul>
          <ul class="social-media">
-           <li><a href="#"><img src="img/Facebook-50.png"></a></li>
-           <li><a href="#"><img src="img/Instagram-50.png"></a></li>
-           <li><a href="#"><img src="img/Twitter-50.png"></a></li>
+           <li><a href="#"><img src="img/facebook-white.png"></a></li>
+           <li><a href="#"><img src="img/instagram-white.png"></a></li>
+           <li><a href="#"><img src="img/twitter-white.png"></a></li>
          </ul>
        <p class="copyright">&copy 2020, Dark Airbnb</p>
      </footer>
