--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,7 @@
 
 :root{
   --primary: #ddd;
-  --dark: #333;
+  --dark: #1f1f1f;
   --light: #fff;
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
@@ -20,7 +20,7 @@ html, a{
 }
 
 body{
-  background:var(--primary);
+  background:var(--dark);
   
 }
 
@@ -59,7 +59,7 @@ fieldset {
 
 .wrapper{
   display: grid;
-  margin: 0.5rem;
+  margin: 0.25rem;
 }
 
 /* NAVIGATION */
@@ -119,7 +119,7 @@ width: 100%;
 }
 
 .header-nav a{
-  background: var(--primary);
+  
   display: grid;
   padding: 0.5rem 0;
   text-align: center;
@@ -240,7 +240,7 @@ padding: 0.5rem;
 .rating-list img{
   width: 50%;
   height: 50%;
-padding: 0.25rem;
+  padding: 0.25rem;
   
 }
 
@@ -255,46 +255,54 @@ padding: 0.25rem;
 
 /* FOOTER */
 .footer{
-  
   display: flex;
   justify-content: space-between;
-  background: var(--primary);
- 
-  padding: 1rem;
+  padding: 0.5rem;
   border: solid 1px;
   /* color: var(--light); */
+  margin: 0.25rem;
 
 }
+
 
 .cs a{
 text-align: left;
 text-decoration: none;
 /* color: var(--dark); */
+
 }
 
-.mobile-apps img{
-  display: flex;
-  width: 60%;
-  height: 60%;
-}
+
 
 .mobile-apps a{
   /* color: var(--dark); */
 }
 
-.social-media img{
-  display: flex;
+.cs, .mobile-apps, .social-media, .copyright{
+  
+
+  padding: 0.5rem;
+  margin: 0.5rem;
+  text-align: center;
+  width: 100%;
+ }
+
+ .mobile-apps img, .social-media img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0.5rem;
+  
 }
 
 
-.copyright{
 
-}
 
 
 /* Banner runs on startup */
 
-#mask {
+/* #mask {
   position:absolute;
   left:0;
   top:0;
@@ -357,19 +365,16 @@ text-decoration: none;
   height: 1202px; 
   display: none; 
   opacity: 0.4;
-}
+} */
 
 /* MEDIA QUERIES */
 @media(min-width: 600px){
+
   .logo, .signin img{
     /* flex-basis: 100%; */
     margin: 1rem;
     width: auto;
-  
-    
   }
-
-
 
   .header-nav ul{
     display: grid;
@@ -381,88 +386,58 @@ text-decoration: none;
   }  
 
   .cs{
-    width: 40%;
-    height: 40%;
-    
-    }
+    width: 100%;
+    height: 100%;
+  }
 
   .mobile-apps{
     display: flex;
-    width: 40%;
-    height: 40%;
-    justify-content: space-evenly;
-   margin: 1rem;
-   }
+    item
+    margin: 1rem;
+  }
  
   .social-media{
     display: flex;
-    width: 40%;
-    height: 40%;
+    width: 100%;
+    height: 100%;
     justify-content: space-around;
     margin: 1rem;
    }
+
    .copyright{
-width: 100%;
-text-align: right;
+    width: 100%;
+    text-align: right;
   }
+
 }
 
 @media(min-width: 800px){
+
   .logo, .signin img{
     /* flex-basis: 100%; */
     margin: 1rem;
     width: 100%;
     max-width: 15%;
-    
   }
 
   .products{
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .cs{  
-    width: 60%;
-    height: 60%;
-    
-    }
-  .mobile-apps{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: space-evenly;
-   
-   }
-
-  .social-media{
-    display: flex;
-    width: 50%;
-    height: 50%;
-    justify-content: space-around;
-   }
-
 }
 
-
 @media(min-width: 1000px){
+
   .logo, .signin img{
     /* flex-basis: 100%; */
     margin: 1rem;
     width: 100%;
     max-width: 20%;
-    
   }
   
   .products{
     grid-template-columns: repeat(6, 1fr);
-  
   }
-  
-  .mobile-apps{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: space-evenly;
-   
-   }
+
 }
 
