--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,17 +33,17 @@
         <ul class="header-logo">
           
           <li class="logo"><a href="#"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
-          
-          <li class="signin"><a href="#"><img src="img/SignIn.png" alt=""><strong class="signin-lbl">Sign In</strong></a></li>
+          <li class="carousel">test</li>
+          <li class="signin"><a href="#"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a></li>
           {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
         </ul>
 
       <nav class="header-nav">
         <ul class="menu-list">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Room Listing</a></li>
-          <li><a href="#">User Registration</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/room-listing">Room Listing</a></li>
+          <li><a href="/user-registration">User Registration</a></li>
+          {{!-- <li><a href="#">Services</a></li> --}}
         </ul>
       </nav>
        <!-- Search the site -->
