--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/room-listing">Room Listing</a></li>
-                {{!-- <li><a href="/products">Product</a></li> --}}
+                {{!-- <li><a href="/contactus">Product</a></li> --}}
                 <li><a href="/user-registration">User Registration</a></li>
             </ul>
         </nav>
@@ -25,9 +25,10 @@
      <!-- FOOTER -->
      <footer class="footer">
          <ul class="cs">
-           <li>Customer Support</li>
-           <li><a href="#">Contact Us</a></li>
-           <li><a href="#">Return & Exchanges</a></li>
+           <li>Dark Airbnb</li>
+           <li><a href="#">Careers</a></li>
+           <li><a href="#">Policies</a></li>
+           <li><a href="#">Help</a></li>
          </ul>
          <ul class="mobile-apps">
            
