working on footer

--- a/views/roomlisting.handlebars
+++ b/views/roomlisting.handlebars
@@ -13,15 +13,5 @@
 
 
 {{/each}} --}}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-</head>
-<body>
-   test room listing
-</body>
-</html>
+   <h1>test room listing</h1>
