working on user registration page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,75 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{title}}</title>
-    <meta name="description" content="Rent Rooms">
-    <meta name="author" content="Ivandi S">
-    <!-- You may change this "Reset" to "Normalize" if preferred -->
-    <link rel="stylesheet" href="css/reset.css"> 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Material design icons are use below. Remove this line if using other font packs or images. Details on Material Design icons can be found here: https://material.io/resources/icons/ -->
-    <!-- <script src="https://kit.fontawesome.com/91d2257466.js" crossorigin="anonymous"></script> -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script> 
-    <link rel="stylesheet" href="css/index.css">
-</head>
+{{>header}}
+
 <body>
-        {{!-- <header>
-            <h1>{{headingInfo}}</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/room-listing">Room Listing</a></li>
-                <li><a href="/contactus">Product</a></li>
-                <li><a href="/user-registration">User Registration</a></li>
-            </ul>
-        </nav>
-        <main>
-                {{{body}}}
-        </main> --}}
-
-    <div class="wrapper">
-    <!-- NAVIGATION -->
-    <header>
-        <ul class="header-logo">
-          
-          <li class="logo"><a href="#"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
-          <li class="carousel">test</li>
-          <li class="signin"><a href="#"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a></li>
-          {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
-        </ul>
-
-      <nav class="header-nav">
-        <ul class="menu-list">
-          <li><a href="/">Home</a></li>
-          <li><a href="/room-listing">Room Listing</a></li>
-          <li><a href="/user-registration">User Registration</a></li>
-          {{!-- <li><a href="#">Services</a></li> --}}
-        </ul>
-      </nav>
-       <!-- Search the site -->
-       
-  
-        <!-- Additional functionality or links -->
-        <!-- <ul>
-          <li><button><span class="material-icons">favorite_border</span></button></li>
-          <li><button><span class="material-icons">shopping_cart</span></button></li>
-        </ul> -->
-    </header>
-
+  <div class="wrapper">
+    {{>nav}}
     <main class="main-section">
-        <section class="filters-by">
-          <h2>Filters</h2>
-          <form class="filters" id="filtersForm">
-            <fieldset>
+      <section class="filters-by">
+        <h2>Filters</h2>
+        <form class="filters" id="filtersForm">
+          <fieldset>
             <legend for="productName"> &nbsp Search &nbsp</legend>
-              <input type="search" name="find" id="productName">
-            
+            <input type="search" name="find" id="productName">
           </fieldset>
-            <!-- <button type="button"><span class="material-icons">search</span></button> -->
-            {{!-- <fieldset class="brandName">
+          <!-- <button type="button"><span class="material-icons">search</span></button> -->
+          {{!-- <fieldset class="brandName">
               <legend for="brandName">&nbsp Brand &nbsp</legend>
                 <select name="brandName" id="brandName">
                   <option value="all" selected>All Brands</option>
@@ -79,9 +24,8 @@
                   <option value="nike">Nike</option>
                   <option value="puma">Puma</option>
                 </select>
-              
             </fieldset> --}}
-            {{!-- <fieldset class="rating">
+          {{!-- <fieldset class="rating">
               <legend> &nbsp Ratings &nbsp</legend>
               <ul class="rating-list">
                 <li><label for="all"><input type="radio" name="rating" value="all" checked>&nbsp All
@@ -118,7 +62,7 @@
                 </li>
               </ul>
             </fieldset> --}}
-            <!-- <fieldset class="colour">
+          <!-- <fieldset class="colour">
               <legend>&nbsp Colour &nbsp</legend>
               <ul>
                 <li><input type="checkbox" name="colour" value="black" id="black"> <label for="black">Black</label></li>
@@ -128,7 +72,7 @@
                 <li><input type="checkbox" name="colour" value="blue" id="blue"> <label for="blue">Blue</label></li>
               </ul>
             </fieldset> -->
-                    <!--   <fieldset class="sort-by-size">
+          <!--   <fieldset class="sort-by-size">
                         <legend>Sizes</legend>
                         <ol>
                           <li><input type="checkbox" name="size" value="xs" id="xs"> <label for="xs">XS</label></li>
@@ -138,35 +82,33 @@
                           <li><input type="checkbox" name="size" value="xl" id="xl"> <label for="xl">XL</label></li>
                         </ol>
                       </fieldset> -->
-          </form>
-        </section>
-        <section class="mid-section">
-          <header class="sort-by">
-            <!-- <h1>Sale on [Category Name]</h1> -->
-            <fieldset class="sort-order">
-              <label for="sortOrder">Sort by:
-                <select name="sort" id="sortOrder" class="sort">
-                  <!-- <option value="none" disabled selected>-- Sort by --</option> -->
-                  <option value="priceHigh">Price, highest to lowest</option>
-                  <option value="priceLow">Price, lowest to highest</option>
-                  <option value="nameAsc" selected>Name, A to Z</option>
-                  <option value="nameDesc">Name, Z to A</option>
-                  <!-- <option value="newest">Newest releases</option> -->
-                </select>
-              </label>
-            </fieldset>
-        
-            <h2>Products <small id="numResults">(5 results)</small></h2>
-          </header>
-          <section id="products" class="products"></section>
+        </form>
+      </section>
+      <section class="mid-section">
+        {{!-- <header class="sort-by">
+          <!-- <h1>Sale on [Category Name]</h1> -->
+          <fieldset class="sort-order">
+            <label for="sortOrder">Sort by:
+              <select name="sort" id="sortOrder" class="sort">
+                <!-- <option value="none" disabled selected>-- Sort by --</option> -->
+                <option value="priceHigh">Price, highest to lowest</option>
+                <option value="priceLow">Price, lowest to highest</option>
+                <option value="nameAsc" selected>Name, A to Z</option>
+                <option value="nameDesc">Name, Z to A</option>
+                <!-- <option value="newest">Newest releases</option> -->
+              </select>
+            </label>
+          </fieldset>
+          <h2>Products <small id="numResults">(5 results)</small></h2>
+        </header> --}}
+        <section id="products" class="products"></section>
         {{{body}}}
-          <!-- <div class="list" id="list"></div> -->
-          <div class="pagenumbers" id="pagination"></div><br>
-        </section>
+        <!-- <div class="list" id="list"></div> -->
+        <div class="pagenumbers" id="pagination"></div><br>
+      </section>
     </main>
   </div>
-  {{> footer/footerblock}}
+  {{> footer}}
   {{!-- <script src="js/index.js"></script> --}}
-
 </body>
 </html>
