--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -17,7 +17,7 @@
 <header>
   <ul class="header-logo">
 
-    <li class="logo"><a href="#"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
+    <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
     <li class="carousel">test</li>
     <li class="signin"><a href="/user-registration" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a>
     </li>
