--- a/public/css/userreg.css
+++ b/public/css/userreg.css
@@ -109,11 +109,12 @@ input[type=submit] {
 /* MEDIA QUERIES */
 @media(min-width: 600px){
   .login {
-
-    width: 100%;
-
-    
+    width: 80%;  
   }
+}
 
-
+@media(min-width: 800px){
+  .login {
+    width: 60%; 
+  }
 }
