working on room listing page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,15 @@
   <div class="wrapper">
     {{>nav}}
     <main class="main-section">
-      <section class="filters-by">
+      {{!-- left --}}
+      {{!-- <section class="filters-by">
         <h2>Filters</h2>
         <form class="filters" id="filtersForm">
           <fieldset>
             <legend for="productName"> &nbsp Search &nbsp</legend>
             <input type="search" name="find" id="productName">
-          </fieldset>
+          </fieldset> --}}
+
           <!-- <button type="button"><span class="material-icons">search</span></button> -->
           {{!-- <fieldset class="brandName">
               <legend for="brandName">&nbsp Brand &nbsp</legend>
@@ -82,8 +84,9 @@
                           <li><input type="checkbox" name="size" value="xl" id="xl"> <label for="xl">XL</label></li>
                         </ol>
                       </fieldset> -->
-        </form>
-      </section>
+        {{!-- left --}}
+        {{!-- </form>
+      </section> --}}
       <section class="mid-section">
         {{!-- <header class="sort-by">
           <!-- <h1>Sale on [Category Name]</h1> -->
