--- a/public/css/book.css
+++ b/public/css/book.css
@@ -1,4 +1,4 @@
-.login {
+.book{
   position: relative;
   margin: 0.5rem auto;
   padding: 0.5rem;
@@ -7,68 +7,40 @@
   border-radius: 3px;
   -webkit-box-shadow: 0 0 40px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 40px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+  color: #555;
+  font-weight: bold;
   
 }
 
-.login h1 {
+.book h1{
   margin: 0.5rem;
-  font-size: 1rem;
   font-weight: bold;
   color: #555;
-  text-align: center;
-  text-shadow: 0 1px var(--light);
-
-}
-
-.login p {
-  margin: 0.5rem;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-
-}
-
-
-.login input[type=text], .login input[type=password] {
-  width: 100%;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-
-.login p.remember_me {
   text-align: left;
-  margin: 0 0.5rem;
+  text-shadow: 0 1px var(--light);
+}
+
+/* .book fieldset {
+  margin: 0.5rem;
+} */
+
+.in-out{
+display: flex;
 
 }
 
-.login p.remember_me label {
-  color: #777;
-  cursor: pointer;
+.book input[type=search], .book input[type=text] {
+  width: 100%;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
-.login p.submit {
+.book p.submit {
   text-align: right;
   margin: 0.5rem;
 
-}
-
-.login-help {
-  margin: 0.5rem;
-  font-size: 11px;
-  color:var(--light);
-  text-align: center;
-  text-shadow: 0 1px #2a85a1;
-}
-
-.login-help a {
-  color: #cce7fa;
-  text-decoration: none;
-}
-
-.login-help a:hover {
-  text-decoration: underline;
 }
 
 :-moz-placeholder {
@@ -76,13 +48,12 @@
   font-size: 13px;
 }
 
-::-webkit-input-placeholder {
+::-webkit-input-placeholder, input[type=date] {
   color: #ccc;
   font-size: 13px;
 }
 
-
-input[type=text], input[type=password] {
+input[type=search], input[type=text], input[type=date], fieldset{
   margin: 0.25rem 0;
   padding: 0.5rem;
   width: 100%;
@@ -91,6 +62,7 @@ input[type=text], input[type=password] {
   border: 1px solid;
   border-color: #c4c4c4 #d1d1d1 #d4d4d4;
   border-radius: 2px;
+
 
 }
 
@@ -108,15 +80,16 @@ input[type=submit] {
 
 /* MEDIA QUERIES */
 @media(min-width: 600px){
-  .login {
+  .book {
     width: 80%;  
     margin: 1rem auto;
   }
 }
 
 @media(min-width: 800px){
-  .login {
-    width: 60%; 
+  .book {
+    width: 50%; 
     margin: 2rem auto;
   }
 }
+
