--- a/public/css/room.css
+++ b/public/css/room.css
@@ -1,5 +1,7 @@
 .room{
   display: grid;
+  padding: 0 0.5rem;
+  column-gap: 0.5rem;
 }
 
 .room-info{
@@ -23,11 +25,12 @@
 }
 
 .star-img{
-  width: 15%;
-  /* height: 30%; */
+  width: 100%;
+  max-width: 15%;
+  
 }
 
-.product{
+/* .product{
   text-align: center;
   box-shadow: var(--shadow);
   border-radius: 0.5em;
@@ -48,23 +51,51 @@
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0 ;
-}
+} */
 
+/* MEDIA QUERIES */
 @media(min-width: 600px){
   .room{
+    
     grid-template-columns: repeat(2, 1fr);
   }
+  .star-img{
+    width: 100%;
+    max-width: 22%;
+    
+  }
+
 }
 
 @media(min-width: 800px){
   .room{
     grid-template-columns: repeat(3, 1fr);
   }
+
+  .star-img{
+    width: 100%;
+    max-width: 26%;
+  }
+
+  .room-info{
+    font-size: 0.85rem;
+  }
+
 }
 
 @media(min-width: 1000px){
   .room{
     grid-template-columns: repeat(6, 1fr);
   }
+
+  .star-img{
+    width: 100%;
+    max-width: 30%;
+  }
+
+  .room-info{
+    font-size: 0.9rem;
+  }
+
 }
 
