--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,28 +2,29 @@
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/book.css">
 
-<div class="book">
-  <h1>Book unique places to stay and things to do.</h1>
-  <form action="">
-    <fieldset>
-      <legend for="where"> &nbsp WHERE &nbsp</legend>
-      <input type="search" name="find" id="where" placeholder="Anywhere">
-    </fieldset>
-    <div class="in-out">
+<main class="wrapper">
+  <div class="book">
+    <h1>Book unique places to stay and things to do.</h1>
+    <form action="">
       <fieldset>
-        <legend for="checkIn"> &nbsp CHECK-IN &nbsp</legend>
-        <input type="date" name="checkIn" id="checkIn"  required pattern="\d{2}-\d{2}-\d{4}">
+        <legend for="where"> &nbsp WHERE &nbsp</legend>
+        <input type="search" name="find" id="where" placeholder="Anywhere">
       </fieldset>
+      <div class="in-out">
+        <fieldset>
+          <legend for="checkIn"> &nbsp CHECK-IN &nbsp</legend>
+          <input type="date" name="checkIn" id="checkIn" required pattern="\d{2}-\d{2}-\d{4}">
+        </fieldset>
+        <fieldset>
+          <legend for="checkout"> &nbsp CHECKOUT &nbsp</legend>
+          <input type="date" name="checkOut" id="checkOut">
+        </fieldset>
+      </div>
       <fieldset>
-        <legend for="checkout"> &nbsp CHECKOUT &nbsp</legend>
-        <input type="date" name="checkOut" id="checkOut">
+        <legend for="guest"> &nbsp GUESTS &nbsp</legend>
+        <input type="text" name="guest" id="guest" placeholder="Guests">
       </fieldset>
-    </div>
-    <fieldset>
-      <legend for="guest"> &nbsp GUESTS &nbsp</legend>
-      <input type="text" name="guest" id="guest" placeholder="Guests">
-    </fieldset>
-    {{!-- <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+      {{!-- <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
       <label>
@@ -31,10 +32,12 @@
         Remember me on this computer
       </label>
     </p> --}}
-    
-    <p class="submit"><input type="submit" name="search" value="Search"></p>
-  </form>
-</div>
-<div>
-  <p>Places to stay around Canada</p>
-</div>
+
+      <p class="submit"><input type="submit" name="search" value="Search"></p>
+    </form>
+  </div>
+  <div>
+    <p>Places to stay around Canada</p>
+  </div>
+  
+</main>
