--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,24 +1,10 @@
-{{!-- <header>
-            <h1>{{headingInfo}}</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/room-listing">Room Listing</a></li>
-                <li><a href="/contactus">Product</a></li>
-                <li><a href="/user-registration">User Registration</a></li>
-            </ul>
-        </nav>
-        <main>
-                {{{body}}}
-        </main> --}}
-
 <!-- NAVIGATION -->
 <header>
   <ul class="header-logo">
-
     <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
     <li class="carousel">test</li>
+    {{!-- <li>English</li>
+    <li>$CAD</li> --}}
     <li class="signin"><a href="/user-registration" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a>
     </li>
     {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
@@ -32,12 +18,5 @@
       {{!-- <li><a href="#">Services</a></li> --}}
     </ul>
   </nav>
-  <!-- Search the site -->
 
-
-  <!-- Additional functionality or links -->
-  <!-- <ul>
-          <li><button><span class="material-icons">favorite_border</span></button></li>
-          <li><button><span class="material-icons">shopping_cart</span></button></li>
-        </ul> -->
 </header>
