try to put some pages in the partial folder

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -70,13 +70,13 @@ fieldset {
   justify-items: center;
   justify-content: center;
   border: solid 1px;
-  background-color: green;
-  padding: 0.5rem;
+  /* background-color: green; */
+  padding: 0.5rem 1rem;
 }
 
 .logo, .signin {
   width: 100%;
-  background-color: bisque;  
+
   text-align: center;
 }
 
@@ -87,12 +87,13 @@ fieldset {
 
 }
 
-.carousel{
+.slider{
   background-color: hotpink;
   width: 100%;
   text-align: center;
-  margin: 0.5rem;
-  padding: 0 0.5rem;
+  /* margin: 0.5rem; */
+  padding: 0 0.25rem;
+  background-image: url('/public/img/slider01.jpg');
 }
 
 .header-nav a{
@@ -238,10 +239,7 @@ width: 38%;
 .footer{
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem;
   border: solid 1px;
-  /* color: var(--light); */
-  margin: 0.25rem;
 
 }
 
@@ -359,6 +357,10 @@ width: 38%;
 /* MEDIA QUERIES */
 @media(min-width: 600px){
   /* HEADER */
+  .logo, .signin {
+    width: 90%;
+  }
+
   .header-nav ul{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -373,19 +375,19 @@ width: 38%;
   /* FOOTER */
   .mobile-apps, .social-media{
     display: flex;
-    background-color: grey;
-
    }
 
    .mobile-apps img, .social-media img{
-    width:100%;
-
+    width:90%;
   }
-
 
 }
 
 @media(min-width: 800px){
+  .logo, .signin {
+    width: 80%;
+  }
+
   .products{
     grid-template-columns: repeat(3, 1fr);
   }
@@ -393,9 +395,13 @@ width: 38%;
 }
 
 @media(min-width: 1000px){
+  .logo, .signin {
+    width: 70%;
+  }
+
   .products{
     grid-template-columns: repeat(6, 1fr);
   }
-
+ 
 }
 
