--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,7 +2,7 @@
 <header>
   <ul class="header-logo">
     <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
-    <li class="carousel">test</li>
+    <li class="slider"></li>
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
     <li class="signin"><a href="/user-registration" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a>
