--- a/views/partials/roomlisting.hbs
+++ b/views/partials/roomlisting.hbs
@@ -10,8 +10,9 @@
       <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
    </li>
    <li><label>{{this.description}}</label></li>
-   <li><label>${{this.price}} / night</label></li>
+   <li><label>${{this.price}} CAD / night</label></li>
 </ul>
 {{/each}}
 </div>
+{{!-- <div class="pagenumbers" id="pagination"></div><br> --}}
 
