--- a/views/userregistration.hbs
+++ b/views/userregistration.hbs
@@ -1,22 +1,14 @@
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/index.css">
-<link rel="stylesheet" href="css/book.css">
-
 <div class="login">
-  <h1>Book unique places to stay and things to do.</h1>
+  <h1>Login to Dark Airbnb</h1>
   <form action="">
-    <fieldset>
-            <legend for="where"> &nbsp Search &nbsp</legend>
-            <input type="search" name="find" id="productName">
-          </fieldset>
-    {{!-- <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+    <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
       <label>
         <input type="checkbox" name="remember_me" id="remember_me">
         Remember me on this computer
       </label>
-    </p> --}}
+    </p>
     <p class="submit"><input type="submit" name="commit" value="Login"></p>
   </form>
 </div>
