--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/userreg.css">
   <link rel="stylesheet" href="css/book.css">
+  <link rel="stylesheet" href="css/room.css">
   <link rel="stylesheet" href="css/index.css">
  
 </head>
