--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -12,9 +12,9 @@
 
   <nav class="header-nav">
     <ul class="menu-list">
-      <li><a href="/" title="Home">Home</a></li>
-      <li><a href="/room-listing" title="Room Listing">Room Listing</a></li>
-      <li><a href="/user-registration" title="User Registration">User Registration</a></li>
+      <li><a href="/" >Home</a></li>
+      <li><a href="/room-listing" >Room Listing</a></li>
+      <li><a href="/user-registration" >User Registration</a></li>
       {{!-- <li><a href="#">Services</a></li> --}}
     </ul>
   </nav>
