--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -5,7 +5,7 @@
     <li class="slider"></li>
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
-    <li class="signin"><a href="/user-registration" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign In</strong></a>
+    <li class="signin"><a href="/signup" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
     </li>
     {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
   </ul>
@@ -14,7 +14,7 @@
     <ul class="menu-list">
       <li><a href="/" >Home</a></li>
       <li><a href="/room-listing" >Room Listing</a></li>
-      <li><a href="/user-registration" >User Registration</a></li>
+      <li><a href="/signup" >User Registration</a></li>
       {{!-- <li><a href="#">Services</a></li> --}}
     </ul>
   </nav>
