--- a/views/roomlisting.hbs
+++ b/views/roomlisting.hbs
@@ -1,8 +1,6 @@
-
-
 <div class="room">
 {{#each rooms }}
-<ul class="room-info">
+<ul class="room-info zoom">
    <li><img src={{this.roomImg}}></li>
    <li class="top-room-info">
       <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
