--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,12 @@
+{{#each messages}}
+
+    <div class="errors">{{this}}</div>
+
+{{/each}}
 <div class="login">
   <h1>Login to Dark Airbnb</h1>
-  <form action="">
-    <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+  <form method="POST" action="/login">
+    <p><input type="text" name="email" value="" placeholder="Email address"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
       <label>
@@ -17,5 +22,5 @@
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
 </div>
 <div class="sign-up-help">
-  <p>Don’t have an account? <a href="/user-registration">Sign up</a></p>
+  <p>Don’t have an account? <a href="/signup">Sign up</a></p>
 </div>
