--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,7 +11,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
    <!-- You may change this "Reset" to "Normalize" if preferred -->
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/userreg.css">
+  <link rel="stylesheet" href="css/signup-login.css">
   <link rel="stylesheet" href="css/book.css">
   <link rel="stylesheet" href="css/room.css">
   <link rel="stylesheet" href="css/index.css">
