Redesigned layout on room and book page

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -13,7 +13,7 @@
   <nav class="header-nav">
     <ul class="menu-list">
       <li><a href="/" >Home</a></li>
-      <li><a href="/room-listing" >Room Listing</a></li>
+      <li><a href="/roomlisting" >Room Listing</a></li>
       <li><a href="/signup" >User Registration</a></li>
       {{!-- <li><a href="#">Services</a></li> --}}
     </ul>
