--- a/public/css/book.css
+++ b/public/css/book.css
@@ -1,5 +1,5 @@
 .book{
-  /* position: relative; */
+  
   margin: 0.5rem auto;
   padding: 0.5rem;
   width: 100%;
@@ -82,15 +82,20 @@ input[type=submit] {
 /* MEDIA QUERIES */
 @media(min-width: 600px){
   .book {
-    width: 80%;  
+    display: block;
+    width: 70%;  
     margin: 1rem auto;
+    border: solid 1px;
   }
 }
 
 @media(min-width: 800px){
   .book {
-    width: 50%; 
-    margin: 2rem auto;
+    width: auto; 
+    margin: 2rem 0;
+    margin-top: 0;
+ 
+    
   }
 }
 
