--- a/public/css/index.css
+++ b/public/css/index.css
@@ -57,7 +57,6 @@ h3{
 
 .wrapper{
   display: grid;
-
   padding: 0 0.5rem;
 }
 
@@ -116,15 +115,14 @@ h3{
   justify-content: space-around;
 }
 
-.main-section{
-  display: flex;
-}
+
 
 /* MAIN LEFT */
-.filters-by{
+.main-section{
 
 width: auto;
 padding: 0.5rem;
+
 
 }
 
@@ -384,13 +382,19 @@ width: 38%;
 }
 
 @media(min-width: 800px){
+
   .logo, .signin {
     width: 50%;
   }
 
-  .products{
-    grid-template-columns: repeat(3, 1fr);
+  .wrapper{
+    grid-template-columns: 50% 50%;
   }
+
+ 
+  /* .products{
+    grid-template-columns: repeat(3, 1fr);
+  } */
 
   .mobile-apps img, .social-media img{
     width:80%;
@@ -399,14 +403,14 @@ width: 38%;
 
 }
 
-@media(min-width: 1000px){
+@media(min-width: 900px){
   .logo, .signin {
     width: 40%;
   }
 
-  .products{
+  /* .products{
     grid-template-columns: repeat(6, 1fr);
-  }
+  } */
  
   .mobile-apps img, .social-media img{
     width:50%;
