working on promotion form

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,15 +62,18 @@ h3{
 
 /* NAVIGATION */
 .header-logo{
-  display: grid;
+  display:grid;
   grid-template-columns: 15% 70% 15%;
   align-items: center;
   align-content: center;
   justify-items: center;
   justify-content: center;
   border: solid 1px;
-  /* background-color: green; */
+
   padding: 0.5rem 1rem;
+/* background-image:url(/public/img/sliders/slider01.jpg); */
+
+ 
 }
 
 .logo, .signin {
@@ -86,12 +89,12 @@ h3{
 }
 
 .slider{
-  background-color: hotpink;
+
   width: 100%;
   text-align: center;
   /* margin: 0.5rem; */
   padding: 0 0.25rem;
-  background-image: url('/public/img/slider01.jpg');
+ 
 }
 
 .header-nav a{
@@ -383,7 +386,7 @@ width: 38%;
 
 @media(min-width: 800px){
 
-  .logo, .signin {
+  .logo, .signin, .promo {
     width: 50%;
   }
 
@@ -404,7 +407,7 @@ width: 38%;
 }
 
 @media(min-width: 900px){
-  .logo, .signin {
+  .logo, .signin, .promo {
     width: 40%;
   }
 
