--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 <main class="wrapper">
-  
+  {{!-- <div class="promo-section">
+     {{>promo}}
+  </div> --}}
  
   <div class="main-section">
      {{>book}}
