--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,8 +1,8 @@
 <!-- NAVIGATION -->
 <header>
-  <ul class="header-logo">
+  <ul class="header-logo" >
     <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
-    <li class="slider"></li>
+    <li>{{>slider}}</li>
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
     <li class="signin"><a href="/signup" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
